Tweeter Project up to Setup the Main Container -- Task 2: Fix content behind the nav

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,6 +26,7 @@ body {
   width: 450px;
   height: 1000px;
   background-color: white;
+  padding-top: 80px;
 }
 
 
